2009-12-03  higepon  <higepon@users.sourceforge.jp>

	* Broke build dependencies on JIT library.

2009-11-30  higepon  <higepon@users.sourceforge.jp>

	* Fixed missing canonicalize of Ratnum, Issue 116 pointed out by mrc.mgg.

	* README.md: Wrote on markdown format for github.

	* src/UTF16Codec.cpp : Fixed utf16->string and string->utf16.

2009-11-29  higepon  <higepon@users.sourceforge.jp>

	* gen-git-build.sh: Added to build git master.

	* README: Added building guide.

	* Makefile.am : Modified bootstrap target to fetch psyntax.scm from svn.

	* lib/psyntax/Makefile: Added code for saving psyntax.scm to svn.

2009-11-27  higepon  <higepon@users.sourceforge.jp>

	* Cleaned up top-directory. Most files are moved to src/ directory.

	We need to clean up, since github shows all files on a top directory.

	* src/UTF8Codec.cpp (putChar): Fixed range of UTF8-4.

	* Makefile.am (bootstrap): Added bootstrap target.

	This is used by developer.

2009-11-23  higepon  <higepon@users.sourceforge.jp>

	* VM.h (SAVE_REGISTERS): Fixed the bug Issue 112 pointed out by mrc.mgg.

	SAVE_REGISTERS used to save sp_ and fp_, but this will be broken when stack is expanded automatically.
	So we save the offset of them.

2009-11-22  higepon  <higepon@users.sourceforge.jp>

	* scripts/gen-insn-definitions.scm: Added.

	* library.scm (for-each-with-index): Added for-each-with-index to (mosh) library.

	* Added instruction->integer.1TextualOutputPort.cpp (TextualOutputPort::print): Added print code for Gloc.

2009-11-21  higepon  <higepon@users.sourceforge.jp>

	* Rewrote disasm.

	* Added closure->list, instruction->symbol and instruction?.

	These are used for disasm and jit.

2009-11-17  higepon  <higepon@users.sourceforge.jp>

	* lib/srfi/%3a42/eager-comprehensions.sls (srfi): Added missing import.

	* tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss: For thread safety, prefix-inc! is executed by only main-vm.
