@@ -1,0 +1,68 @@
+/*
+ * JitStackTest.cpp - Tests for JitStack
+ *
+ *   Copyright (c) 2009  Higepon(Taro Minowa)  <higepon@users.sourceforge.jp>
+ *
+ *   Redistribution and use in source and binary forms, with or without
+ *   modification, are permitted provided that the following conditions
+ *   are met:
+ *
+ *   1. Redistributions of source code must retain the above copyright
+ *      notice, this list of conditions and the following disclaimer.
+ *
+ *   2. Redistributions in binary form must reproduce the above copyright
+ *      notice, this list of conditions and the following disclaimer in the
+ *      documentation and/or other materials provided with the distribution.
+ *
+ *   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ *   "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+ *   LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+ *   A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+ *   OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+ *   SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
+ *   TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+ *   PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+ *   LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+ *   NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+ *   SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ *
+ *  $Id: JitStackTest.cpp 183 2008-07-04 06:19:28Z higepon $
+ */
+
+#include <gtest/gtest.h>
+#include "scheme.h"
+#include "Object.h"
+#include "Object-inl.h"
+#include "Pair.h"
+#include "Pair-inl.h"
+#include "JitStack.h"
+
+using namespace scheme;
+
+class JitStackTest : public testing::Test {
+protected:
+    virtual void SetUp() {
+        mosh_init();
+    }
+};
+
+
+static int makeInstruction(int value)
+{
+    return Object::makeRaw(value).toInstruction();
+}
+
+
+TEST_F(JitStackTest, getEmptyTrace) {
+    JitStack stack;
+    EXPECT_STREQ("", stack.getTrace().ascii_c_str());
+}
+
+
+TEST_F(JitStackTest, getTrace) {
+    JitStack stack;
+    stack.push(makeInstruction(Instruction::PUSH));
+    stack.push(makeInstruction(Instruction::CAR));
+    EXPECT_STREQ("CAR\nPUSH\n", stack.getTrace().ascii_c_str());
+}
+
